--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -111,14 +111,16 @@
     advisor       = RNDr. Jaroslav Ráček{,} Ph.D.,
     title         = {Portál digitálního kulturního dědictví},
     TeXtitle      = {Portál digitálního kulturního dědictví},
-    keywords      = {digitalizácia dokumentov, webový portál, kultúrne dedičstvo, indexácia},
-    TeXkeywords   = {digitalizácia dokumentov, webový portál, kultúrne dedičstvo, indexácia},
+    keywords      = {digitalizácia dokumentov, sprístupňovanie dokumentov, webový portál, kultúrne dedičstvo, indexácia popisných dát},
+    TeXkeywords   = {digitalizácia dokumentov, sprístupňovanie dokumentov, webový portál, kultúrne dedičstvo, indexácia popisných dát},
 }
 \thesislong{abstract}{
-    Popsat principy digitalizace a publikování objektů kulturního dědictví. Zaměřit se na tuto problematiku zejména z pohledu regionálních institucí v České republice. Popsat a analyzovat možnosti využití technologie Liferay Portal pro zpracování a publikování záznamů o objektech kulturního dědictví.
+Cieľom tejto bakalárskej práce je popísať princípy digitalizácie a publikovania objektov kultúrneho dedičstva. Je potrebné previesť analýzu požiadaviek na základe stretnutí so zákazníkom, navrhnúť konečnú podobu systému a implementovať celý systém. Dôraz je kladený na portálové technológie.
 }
 \thesislong{thanks}{
-Ďakujem
+Ďakujem RNDr. Jaroslavovi Ráčkovi, PhD. za vedenie mojej bakalárskej práce.
+
+\noindent Ďakujem mame, kolegom a priateľom za podporu počas tvorby praktickej časti a písania práce.
 }
 %% The following section sets up the bibliography.
 \usepackage{csquotes}
@@ -146,6 +148,10 @@
 
 
 \begin{document}
+\chapter{Úvod}
+Táto práca sa zaoberá elektronickým spracovaním a zverejnením kultúrneho dedičstva. V súčasnej dobe je to stále väčší trend v zverejňovaní obsahov múzejných zbierok a zbierok ďalších kultúrnych inštitúcií. Kvôli povahe dát sa ako najjednoduchšie javí použitie portálu na zverejňovanie knižných záznamov ale je tiež možné evidovať obrazy, sochy, zbrane alebo hudobné nástroje. Konkrétne v tomto prípade sa zaoberáme portálom, ktorý sprístupňuje viac zbierok na jednom mieste a rieši nie len sprístupňovanie dokumentov ale aj integráciu s ďalšími portálmi. Typickým vlastníkom môžu byť mestá, kraje alebo celoštátne inštitúcie ako NPÚ \footnote{NPÚ - Národní památkový ústav}. V našom prípade bol vyvíjaný pre koncového zákazníka, ktorým je jeden z krajov Českej republiky. Vieme si ale predstaviť, že podobný portál by mohol byť vhodný pre cirkev, archívy alebo univerzity.
+
+Práca je rozdelená do piatich kapitol. Prvá opisuje tvorbu portálov kultúrneho dedičstva. Druhá sa venuje analýze požiadavkov zákazníka. Tretia približuje technológie využité pri implementácií, ktorá je popísaná poslednou kapitolou. 
 \chapter{Portály digitálneho kultúrneho dedičstva}	
 Zámerom tejto iniciatívy je vytvoriť webový portál, ktorého prostredníctvom bude zaisťovaná príprava a samotné sprístupnenie digitálneho obsahu vybraných fondov pamäťových inštitúcií pôsobiacich na území Českej republiky širokej verejnosti a odborným bádateľom. Ďalej bude umožňovať on-line úpravu metadát a možnosť priloženia ďalších materiálov ktoré s dokumentom súvisia. Web by mal užívateľa zaujať a vytvoriť dojem jednoducho používateľnej interaktívnej stránky aj u používateľa, ktorého daná tématika nezaujíma. Digitálny obsah sa primárne skladá z kníh. Problémom existujúcich nástrojov na prehliadanie tohto obsahu je nepríťažlivosť pre užívateľa. 
 
@@ -154,7 +160,7 @@ Tabuľkové zobrazenie knižných záznamov nespĺňa požiadavky modernej webov
 Na stránke systému Kramerius\footnote{Viď \url{http://kramerius.nkp.cz/kramerius/Welcome.do}.} je sprístupnené vyhľadávanie dokumentov Národnej knižnice Českej republiky. Užívateľské rozhranie je oproti predošlému webu obohatené o funkciu hľadania v celom texte, ktorá umožňuje jednoduchšie zoznámenie sa s funkciami aplikácie. Pokročilé vyhľadávanie je možné zobraziť a skryť pridaným tlačidlom. Priamo na úvodnej stránke sú umiestnené príklady skenovaných dokumentov, ktoré odkazom vedú na detail diela. Zobrazenie výsledkov vyhľadávania je riešené jednoduchým zoznamom. Tento prístup prináša vysokú mieru neprehľadnosti, pretože užívateľ nemôže porovnať hodnoty, či zoradiť výsledky na základe jednotlivých atribútov. Detail obsahuje
 stručné informácie o diele a náhľad strán, ktorý ale nie je dostupný bez inštalácie zásuvného modulu. 
 \section{Smerovanie portálov kultúrneho dedičstva}
-Z analýzy existujúcich nástrojov na prehliadanie kultúrneho dedičstva bolo zistené že pri návrhu aplikácie by sme sa mali zamerať na nasledujúce oblasti:
+Z analýzy existujúcich nástrojov na prehliadanie kultúrneho dedičstva bolo zistené, že pri návrhu aplikácie by sme sa mali zamerať na nasledujúce oblasti:
 \begin{itemize}
 	\item vyhľadávanie
 	\begin{itemize}
@@ -180,7 +186,7 @@ Z analýzy existujúcich nástrojov na prehliadanie kultúrneho dedičstva bolo 
 
 \chapter{Analýza}
 \section{Požiadavky zákazníka}
-Po komunikácii so zákazníkom na analytických stretnutiach boli zistené požiadavky zobrazené diagramom na obrázku \textit{2.1}.\cite{uml1}\cite{uml2}
+Po komunikácii so zákazníkom na analytických stretnutiach boli zistené požiadavky zobrazené diagramom na obrázku \textit{3.1}.\cite{uml1},\cite{uml2}
 \begin{figure}[H]
 	\centering
 		\includegraphics[width=\textwidth]{fithesis/diagram/useCase.png}
@@ -190,10 +196,10 @@ Po komunikácii so zákazníkom na analytických stretnutiach boli zistené pož
 \end{figure}
 
 \subsection{Kategórie dokumentov}
-Dokumenty , ktoré sú predmetom prípravy a zverejnenia prostredníctvom portálu digitálneho kultúrneho dedičstva(ďalej už len PD) sú rozdelené do dvoch základných kategórií:
+Dokumenty, ktoré sú predmetom prípravy a zverejnenia prostredníctvom portálu digitálneho kultúrneho dedičstva (ďalej už len PD) sú rozdelené do dvoch základných kategórií:
 \begin{itemize}
 	\item dokumenty archívnych fondov a múzejných zbierok				
-	\item dokumenty knižničných fondov podľa štandardov NDK\footnote{Národní digitální knihovna}
+	\item dokumenty knižničných fondov podľa štandardov NDK\footnote{NDK - Národní digitální knihovna}
 \end{itemize}
 Pre vyššie uvedené jednotlivé kategórie je nutné použiť v PD rozdielne pracovné postupy a to hlavne v prípravnej fáze pred zverejnením. Dôvodom je samotná podstata dokumentu z pohľadu toho, či ide o dokumenty, ktoré sú v nemennej podobe (monografie, periodiká) alebo dokumenty, u ktorých sa v čase môžu meniť predovšetkým ich popisné informácie. Pre každú kategóriu sú taktiež definované odlišné dátové štruktúry metadát. Predpokladaný objem dokumentov spravovaných PD je 100 000 jednotlivých dokumentov, 1 500 000 strán prepočítaných na formát A4 a približne 20 terabajtov obrazových dát.
 \subsection{Dokumenty archívnych fondov a múzejných zbierok}
@@ -207,7 +213,7 @@ Druhy dokumentov:
 	\item filmy, zvukové nahrávky 
 	\item zbierkové predmety	
 \end{itemize}
-Jedná sa o dokumenty, ktoré vznikli digitalizáciou vybraných archívnych fondov a múzejných zbierok. Z hľadiska nemennosti týchto dokumentov sa jedná o dokumenty premenlivej povahy. Popisné metadáta z KDJ\footnote{Krajská digitalizační jednotka} pre PD u tejto kategórie preto nie je možné použiť. Jedná se teda o dokumenty, u ktorých je nutné ručné doplnenie metadát. 
+Jedná sa o dokumenty, ktoré vznikli digitalizáciou vybraných archívnych fondov a múzejných zbierok. Z hľadiska nemennosti týchto dokumentov sa jedná o dokumenty premenlivej povahy. Popisné metadáta z KDJ\footnote{KDJ - Krajská digitalizační jednotka} pre PD u tejto kategórie preto nie je možné použiť. Jedná se teda o dokumenty, u ktorých je nutné ručné doplnenie metadát. 
 
 \subsection{Dokumenty knižničných fondov podľa štandardov NDK}
 Druhy dokumentov:
@@ -222,16 +228,16 @@ Z hľadiska typu súborov, v ktorých sú digitálne dokumenty uložené, se jed
 	\item obrazové			
 	\item videá
 	\item zvukové záznamy
-	\item vo formáte XML(popisné metadáta)		
+	\item vo formáte XML (popisné metadáta)		
 	\item vo formáte PDF
 \end{itemize}
 \subsection{Vstup dokumentov} 
-Táto časť PD bude zabezpečovať riadený import dát pre prípravu sprístupnenia dokumentov. Vstupné mechanizmy budú rešpektovať potreby jednotlivých kategórií dokumentu. Po importe budú dáta pripravených dokumentov uložené do zverejňovacej databázy. Princíp predávania dokumentov, detailný popis rozhrania a jeho dátová štruktúra bude súčasťou implementačnej analýzy. Zákazník špecifikoval nasledujúce podmienky:
+Táto časť PD bude zabezpečovať riadený import dát pre prípravu sprístupnenia dokumentov. Vstupné mechanizmy budú rešpektovať potreby jednotlivých kategórií dokumentu. Po importe budú dáta pripravených dokumentov uložené do zverejňovacej databázy. Princíp predávania dokumentov, detailný popis rozhrania a jeho dátová štruktúra budú súčasťou implementačnej analýzy. Zákazník špecifikoval nasledujúce podmienky:
 \begin{itemize}
 	\item PD bude umožňovať import viacerých dokumentov súčasne.
 	\item Pri zahájení prípravy vstupu dokumentu do PD bude prevedená kontrola duplicity s predchádzajúcimi importovanými dokumentmi.
 	\item Behom importu dokumentu do PD systém priradí jeho vlastníka – osobu kompletne zodpovednú za celé sprístupnenie a zverejnenie. Vlastníkom se stáva užívateľ PD, ktorý import úspešne dokončil. Zdrojom dát pre import bude mimo iných webové rozhranie PD a zdieľané diskové zložky unikátne pre každého administrátora.
-	\item PD bude disponovať funkciou pre import a aktualizáciu popisných metadát a prípadných obrazových dát zo systému JANUS2000 (evidenčný systém okresných archívov) a systému VISMO (dáta projektu MG Vysočiny on-line).
+	\item PD bude disponovať funkciou pre import a aktualizáciu popisných metadát a prípadných obrazových dát zo systému JANUS2000 (evidenčný systém okresných archívov) a systému VISMO (dáta projektu \textit{MG on-line}).
 \end{itemize}
 \subsection{Príprava dokumentov k sprístupneniu}
 Táto časť PD bude zahŕňať proces sprístupnenia dokumentov a možnosť ich úpravy pred zverejním. Zákazník špecifikoval nasledujúce funkcie:
@@ -284,7 +290,7 @@ Digitálne objekty importované zo systému SIRIUS sú fyzicky reprezentované p
 	\label{structDg3l}
 \end{figure}
 \subsection{Typy objektov z hľadiska štruktúry}
-Jeden SIP balíček bude transformovaný do práve jedného listového objektu (v prípade štrukturovaného objektu) alebo do jedného jednoduchého objektu. Napríklad v prípade monografie je to priamo vlastný digitálny objekt. V prípade periodika je SIP balíček listový objekt, ktorý sa stane súčasťou štrukturovaného objektu a bude zaradený ako digitálny objekt na jeho najnižšej úrovni).
+Jeden SIP balíček bude transformovaný do práve jedného listového objektu (v prípade štrukturovaného objektu) alebo do jedného jednoduchého objektu. Napríklad v prípade monografie je to priamo vlastný digitálny objekt. V prípade periodika je SIP balíček listový objekt, ktorý sa stane súčasťou štrukturovaného objektu a bude zaradený ako digitálny objekt na jeho najnižšej úrovni.
 Z dát v listových objektoch bude možné zložiť celú štruktúru hierarchického digitálneho objektu pretože každý SIP balíček nesie informácie o celom štrukturovanom objekte a je možné príslušný objekt z týchto informácií vytvoriť. Dáta štrukturovaného objektu sú teda uložené redundantne v niekoľkých listových objektoch.
 Či sa jedná o jednoduchý objekt alebo sa jedná o štrukturovaný objekt a typ dokumentu z pohľadu obsahu bude určovať algoritmus rozoznania typu objektu. 
 \subsubsection{Jednoduchý objekt}
@@ -314,7 +320,7 @@ Hierarchický alebo štrukturovaný objekt je na najnižšej úrovni zložený z
 	\end{itemize}
 \end{itemize}
 \subsubsection{Listový objekt}	
-Listový objekt je základným stavebným prvkom štrukturovaného objektu. Na rozdiel od jednoduchého objektu je vždy sprevádzaný svojim syntetickým nadobjektem. Tento syntetický nadobjekt je vždy čitateľný zo všetkých SIP balíčkov, ktoré sú uložené do objektu na najnižšej úrovni. Pokiaľ bude v štrukturovanom objekte iba jeden listový objekt, bude ho portál stále zobrazovať ako viacúrovňový objekt.
+Listový objekt je základným stavebným prvkom štrukturovaného objektu. Na rozdiel od jednoduchého objektu je vždy sprevádzaný svojim syntetickým nadobjektom. Tento syntetický nadobjekt je vždy čitateľný zo všetkých SIP balíčkov, ktoré sú uložené do objektu na najnižšej úrovni. Pokiaľ bude v štrukturovanom objekte iba jeden listový objekt, bude ho portál stále zobrazovať ako viacúrovňový objekt.
 \subsection{Typy objektov z hľadiska obsahu}
 Z hľadiska obsahu objektov rozoznávame niekoľko typov. U jednotlivých typov obsahu je vždy potrebné rozhodnúť aké atribúty budú načítané zo SIP balíčkov do vnútornej štruktúry PD. Všetky relevantné atribúty budú zanesené do vyhľadávacieho indexu.
 
@@ -330,7 +336,7 @@ Pre jednoznačné odlíšenie digitálnych objektov budú využité atribúty ge
 	\item Parameter \textit{DIGIKUJIZ} - úradné zápisy
 \end{itemize}
 \subsection{Návrh dizajnu}
-Táto kapitola popisuje dizajn aplikácie a funkcie dostupné užívateľovi v jednotlivých sekciách.	Pre lepšiu predstavu ako bude popisovaná funkcionalita vyzerať vo výslednom systéme je pri prípadoch použitia uvedený nákres užívateľského rozhrania(tzv. mockup).
+Táto kapitola popisuje dizajn aplikácie a funkcie dostupné užívateľovi v jednotlivých sekciách.	Pre lepšiu predstavu, ako bude popisovaná funkcionalita vyzerať vo výslednom systéme, je pri prípadoch použitia uvedený nákres užívateľského rozhrania (tzv. mockup).
 \subsubsection{Úvodná stránka portálu}
 Úvodná stránka PD bude obsahovať čo najmenej informácií v záujme čo najväčšej prehľadnosti a jednoduchosti pre užívateľa. Konkrétne bude obsahovať:
 \begin{itemize}
@@ -339,7 +345,7 @@ Táto kapitola popisuje dizajn aplikácie a funkcie dostupné užívateľovi v j
 	\item odkaz na kontaktné údaje
 	\item odkaz na informácie o jednotlivých pamäťových inštitúciách
 	\item odkaz na autorizované operácie pre prihláseného užívateľa
-	\item mapa umiestnenia dokumentov
+	\item mapu umiestnenia dokumentov
 \end{itemize}
 \begin{figure}[H]
 	\centering
@@ -347,16 +353,18 @@ Táto kapitola popisuje dizajn aplikácie a funkcie dostupné užívateľovi v j
 	\caption{Nákres úvodnej stránky}
 	\label{mockup-welcome}
 \end{figure}
+\clearpage
 
 \subsubsection{Stručný detail objektu}
 Stručný detail objektu sa zobrazí pri kliknutí na konkrétny vyhľadaný objekt. Stručný detail nebude zobrazený cez celú plochu okna prehliadača, ale iba na polovici okna. Druhá polovica bude obsahovať mapu s bodmi predstavujúcimi miesta vydania, uloženia, či miesta, ku ktorým sa objekt obsahovo vzťahuje. 
-\clearpage
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth]{fithesis/mockup/detail-small.png}	
 	\caption{Nákres stručného detailu objektu}
 	\label{mockup-detail-small}
 \end{figure}
+\clearpage
 \subsubsection{Plný detail objektu}
 Úplný detail objektu sa zobrazí po kliknutí na tlačidlo \textit{Zobraziť plný detail} v stručnom detaile objektu. Plný detail bude zobrazený cez celú plochu okna prehliadača a bude zobrazovať všetky informácie o danom objekte.
 Z plného detailu bude možné tento detail vytlačiť a exportovať do PDF. Rovnako bude možné vytlačiť a exportovať do PDF samotný objekt. Plný detail bude zobrazený na adrese, ktorá bude vo formáte permalinku. To znamená, že pri skopírovaní adresy z adresného riadku prehliadača do nového okna, bude zobrazený ten istý detail pôvodne zobrazeného objektu. Plný detail objektu bude tiež obsahovať napojenie na štandardné Facebook API, umožňujúce zdieľanie stránky.
@@ -366,19 +374,18 @@ Z plného detailu bude možné tento detail vytlačiť a exportovať do PDF. Rov
 	\caption{Nákres plného detailu objektu}
 	\label{mockup-detail-full}
 \end{figure}
+\clearpage
 \subsubsection{Rozhranie pre import dát zo systému Sirius a Vismo}
 V príslušnej aplikácii v administračnom rozhraní užívateľ klikne na tlačidlo \textit{Spustit} pri položke \textit{SIRIUS} alebo \textit{VISMO}. Import je zahájený a do výpisu v spodnej časti obrazovky sa vypisujú informácie o prebiehajúcom importe.
-\clearpage
 \begin{figure}[H]
 	\centering
 		\includegraphics[width=\textwidth]{fithesis/mockup/import.png}	
 	\caption{Nákres administračného rozhrania pre import dokumentov}
 	\label{mockup-import}
 \end{figure}
-
+\clearpage
 \subsubsection{Správa pamäťových inštitúcií}
 Oprávnený užívateľ bude mať možnosť v administračnom rozhraní vytvárať, upravovať a mazať pamäťové inštitúcie so všetkými ich údajmi.
-\clearpage
 \begin{figure}[H]
 	\centering
 		\includegraphics[width=\textwidth]{fithesis/mockup/institution.png}	
@@ -443,11 +450,11 @@ Poradie vrátených záznamov môže byť vytvorené na základe určitého atri
 	\item \textbf{Rozsah atribútu , v ktorom bol výraz nájdený} – čím je obsah atribútu dlhší, tým je relevancia tohto výskytu nižšia
 \end{compactenum}
 \subsubsection{Aggregations}			
-Výsledky vyhľadávania je niekedy potrebné zlučovať do skupín na základe určitého parametru. \textit{Elastic} ponúka funkciu \textit{Aggregations}. Pokiaľ je teda v dotaze špecifikovaný atribút, na základe ktorého sa majú záznamy zoskupovať je výsledkom objekt obsahujúci niekoľko skupín ďalších objektov, ktoré môžu predstavovať samotné záznamy alebo ďalšie skupiny zjednotení. Vďaka formátu JSON je možné tieto objekty serializovať. V prípade objektových jazykov ako Java je potom jednoduché poskladať štruktúry, s ktorými jazyk pracuje pomocou knižnice na deserializáciu.  
+Výsledky vyhľadávania je niekedy potrebné zlučovať do skupín na základe určitého parametru. \textit{Elastic} ponúka funkciu \textit{Aggregations}. Pokiaľ je teda v dotaze špecifikovaný atribút, na základe ktorého sa majú záznamy zoskupovať, je výsledkom objekt obsahujúci niekoľko skupín ďalších objektov, ktoré môžu predstavovať samotné záznamy alebo ďalšie skupiny zjednotení. Vďaka formátu JSON je možné tieto objekty serializovať. V prípade objektových jazykov ako Java je potom jednoduché poskladať štruktúry, s ktorými jazyk pracuje, pomocou knižnice na deserializáciu.  
 \section{OAI-PMH}
-OAI-PMH\footnote{OAI-PMH - The Open Archives Initiative Protocol for Metadata Harvesting} je protokol ktorý sa používa na získavanie metadat elektronicky evidovaných dokumentov. Vznikol ako iniciatíva na zjednodušenie zbierania informácií vo viacerých separátnych repozitároch. Aj keď presný formát dát nie je určený, pre lepšiu interoperabilitu sa odporúča použitie štandardu Dublin Core.\cite{dublin-core} Pri použití protokolu sa na jednej strane komunikácie nachádza poskytovateľ, ktorý dáta vystavuje. Typicky ide o inštitúciu spravujúcu dané dokumenty. Záznamy sú do databázy poskytovateľa vkladané ručne alebo v prípade dokumentu vystaveného inou inštitúciou je možné proces automatizovať a použiť informácie získané z tohto zdroja. Záznamy môžu byť upravované a vykonané zmeny sa prejavia vo vystavených dátach. Na druhej strane je zberateľ, ktorý o dáta žiada. Pomocou protokolu môže zozbierať metadáta dokumentov z rôznych inštitúcií a vytvoriť rozhranie pre užívateľov, ktorí takto môžu vyhľadávať nad zjednotenými informáciami na jednom mieste.\cite{oai1}\cite{oai2}
+OAI-PMH\footnote{OAI-PMH - The Open Archives Initiative Protocol for Metadata Harvesting} je protokol, ktorý sa používa na získavanie metadat elektronicky evidovaných dokumentov. Vznikol ako iniciatíva na zjednodušenie zbierania informácií vo viacerých separátnych repozitároch. Aj keď presný formát dát nie je určený, pre lepšiu interoperabilitu sa odporúča použitie štandardu Dublin Core.\cite{dublin-core} Pri použití protokolu sa na jednej strane komunikácie nachádza poskytovateľ, ktorý dáta vystavuje. Typicky ide o inštitúciu spravujúcu dané dokumenty. Záznamy sú do databázy poskytovateľa vkladané ručne alebo v prípade dokumentu vystaveného inou inštitúciou je možné proces automatizovať a použiť informácie získané z tohto zdroja. Záznamy môžu byť upravované a vykonané zmeny sa prejavia vo vystavených dátach. Na druhej strane je zberateľ, ktorý o dáta žiada. Pomocou protokolu môže zozbierať metadáta dokumentov z rôznych inštitúcií a vytvoriť rozhranie pre užívateľov, ktorí takto môžu vyhľadávať nad zjednotenými informáciami na jednom mieste.\cite{oai1},\cite{oai2}
 \section{Z39.50}
-Protokol Z39.50 je protokol na vyhľadávanie nad textovými databázami. Typicky sa využíva v knižničných systémoch. Na rozdiel od OAI-PMH nie je nutné dáta zozbierať a vytvoriť vyhľadávacie rozhranie ale je možné vyhľadávať priamo nad databázou konkrétnej inštitúcie. Je tiež možné vytvoriť rozhranie pre jednoduchšie používanie, zjednotenie informácií z viacerých zdrojov, alebo kombináciu s vyhľadávaním nad miestnou databázou. \cite{z39501}\cite{z39502}      
+Protokol Z39.50 je protokol na vyhľadávanie nad textovými databázami. Typicky sa využíva v knižničných systémoch. Na rozdiel od OAI-PMH nie je nutné dáta zozbierať a vytvoriť vyhľadávacie rozhranie, ale je možné vyhľadávať priamo nad databázou konkrétnej inštitúcie. Je tiež možné vytvoriť rozhranie pre jednoduchšie používanie, zjednotenie informácií z viacerých zdrojov alebo kombináciu s vyhľadávaním nad miestnou databázou. \cite{z39501},\cite{z39502}      
 \section{Portál}
 \subsection{Použitie portálu}
 Z užívateľského pohľadu je portál webová stránka, ktorá slúži ako jednotný bod prístupu k informáciám. Zámerom portálu je vytvoriť vstupnú bránu pre užívateľa po pripojení na internet. Môže zoskupovať informácie z rôznych zdrojov a zobrazovať ich užívateľovi na jednom mieste. Portál sa automaticky prispôsobuje potrebám konkrétneho užívateľa, ktorý ho používa. Užívateľ by tiež mal mať možnosť prispôsobiť zobrazený obsah podľa svojich potrieb.\cite{portal-common1}
@@ -457,17 +464,16 @@ K zobrazovaniu zjednotených informácií používa portál portlety. Portlet je
 Do portálu je tiež možné nasadiť vlastné portlety. Najnovšia špecifikácia popisujúca vývoj týchto portletov je JSR\footnote{JSR - Java Specification Request} 286, ktorá popisuje interakciu aplikácií s portálom. Vďaka tomu je možné vytvárať portlety, ktoré sú ľahko rozšíriteľné a prenositeľné bez ohľadu na typ použitej portálovej technológie.
 \section{Databázový systém}
 Z analýzy požiadavkov vyplýva, že aplikácia potrebuje pre svoj beh databázu, v ktorej budú uložené všetky dáta vytvorené samotnou aplikáciou. Ostatné informácie ako užívateľské údaje, rozloženie portletov na stránke alebo akékoľvek dáta generované existujúcimi aplikáciami portálu Liferay sú ukladané do oddelenej databázy. Obidve databázy sú v správe KDJ. Pre tento prípad sú vystavené dve inštancie databázovej technológie MSSQL.  
-\section{Liferay portal}
+\section{Liferay Portal}
 V analytickej fáze projektu boli zvažované viaceré portálové technológie ako napr. GateIn, Jetspeed a WebSphere. Nakoniec bola zvolená technológia Liferay Portal. Táto technológia vyniká výbornou dokumentáciou, celosvetovým počtom užívateľov a dostupnosťou. Liferay Portal je open source riešenie, ktoré je možné zakúpiť v troch úrovniach podpory alebo ho využívať bezplatne vo verzii CE\footnote{CE - Community edition}. Od verzie 6 je liferay otvorený pod licenciou LGPL, ktorá garantuje prístup ku zdrojovým kódom počas implementácie. Táto vlastnosť v kombinácií s možnosťou nahradenia existujúcich modulov z neho robí vysoko prispôsobiteľnú vývojovú platformu\cite{yuan-interface},\cite{yuan-build}.
 \clearpage
 \begin{figure}[H]
 	\centering
-		\includegraphics[width=\textwidth]{fithesis/obr/liferayUvod.png}
-	
+		\includegraphics[width=\textwidth]{fithesis/obr/liferayUvod.png}	
 	\caption{Práve nainštalovaný Liferay Portal}
 	\label{liferayUvod}
 \end{figure}
-
+\noindent Na obrázku \textit{3.1} je zobrazená úvodná stránka portálu bez akejkoľvek modifikácie. Obsahuje odkazy na prihlásenie, manuály na používanie portálu alebo integráciu s OpenID.
 \chapter{Implementácia}
 \section{Využité portlety Liferay Portal}
 Pred implementáciou samotnej aplikácie bolo potrebné určiť, akú časť funkcionality poskytovanej technológiou Liferay Portal je možné použiť v PD. Rozhodli sme sa pre nasledujúce moduly:
@@ -485,7 +491,7 @@ Obslužné triedy aplikácie sa delia do troch balíkov. Každý z nich je z poh
 	\item \textit{portlet} - balík zodpovedný za frontend funkcionalitu, obsluhuje požiadavky užívateľa, stará sa o zobrazovanie obsahu\cite{java-ee}
 \end{itemize}
 \section{Digitálny objekt}
-Na začiatku implementácie bola vytvorená štruktúra digitálnych objektov podľa obrázku 3000. Na vrstve \textit{interface} je reprezentovaná týmito objektmi:
+Na začiatku implementácie bola vytvorená štruktúra digitálnych objektov. Na vrstve \textit{interface} je reprezentovaná týmito objektmi:
 \begin{itemize}
 	\item \textit{DigitalObjectDto} - abstraktná trieda, predstavuje spoločný základ pre všetky digitálne objekty, obsahuje základné atribúty ako napríklad \textit{id, miesto uloženia, názov}
 	\item \textit{SiriusObjectDto} - abstraktná trieda, predstavuje základ pre všetky objekty okrem zbierkových predmetov, rozširuje triedu \textit{DigitalObjectDto} o nasledujúce atribúty:
@@ -494,10 +500,10 @@ Na začiatku implementácie bola vytvorená štruktúra digitálnych objektov po
 		\item \textit{sipPackageName} - názov SIP balíčku, z ktorého bol záznam poskladaný
 		\item \textit{PhysicalDescriptionDto} - samostatný objekt, v ktorom je uložený popis dokumentu a informácie o jeho vytvorení
 	\end{itemize}
-	\item \textit{MonographSingleDto} - reprezentuje monografiu, pridáva atribút \textit{ccnb}(číslo České národní bibliografie)
+	\item \textit{MonographSingleDto} - reprezentuje monografiu, pridáva atribút \textit{ccnb} (číslo České národní bibliografie)
 	\item \textit{MonographMultivolumeDto} - reprezentuje jeden výtlačok viaczväzkovej monografie, pridáva atribút \textit{partNumber}
 	\item \textit{PeriodicalIssueDto} - reprezentuje jeden výtlačok periodika, pridáva atribút \textit{issueNumber} a \textit{subTitle}
-	\item \textit{MapDto} - reprezentuje mapu, pridáva atribút \textit{scale}(mierka mapy)
+	\item \textit{MapDto} - reprezentuje mapu, pridáva atribút \textit{scale} (mierka mapy)
 	\item \textit{PhotographDto} - reprezentuje fotografiu, pridáva atribút \textit{imageNumber}
 	\item \textit{OfficialRecordIssueDto} - reprezentuje úradný dokument
 	\item \textit{VedutteDto}	
@@ -532,7 +538,7 @@ Logiku aplikácie si môžeme najlepšie ukázať na jednoduchom príklade. Zvol
 	\end{compactenum} 
 	\item Nastaví hodnotu parametra \textit{PARAM\_PAGE} na \textit{PAGE\_EDIT\_DIGITAL\_OBJECT} a hodnotu parametra \textit{PARAM\_ID} na id upravovaného dokumentu, čím zabezpečí návrat na stránku úpravy dokumentu.	 
 \end{compactenum}
-\section{Ukážka kódu}
+\bigskip Nasledujúca ukážka kódu vykonáva funkcionalitu popísanú vyššie.
 \begin{lstlisting}[language=Java, basicstyle=\small, style=java-nice]
 @ActionMapping(ACTION_DIGITAL_OBJECT_SAVE)
 public void updateMonographSingleDocument(Model model, 
@@ -552,16 +558,22 @@ public void updateMonographSingleDocument(Model model,
       SessionErrors.add(request, "monograph-form-contain-error");
    }
     
-      response.setRenderParameter(PARAM_ID, 
-         digitalObjectDto.getId());
-      response.setRenderParameter(PARAM_PAGE, 
-         PAGE_EDIT_DIGITAL_OBJECT);
+   response.setRenderParameter(PARAM_ID, 
+      digitalObjectDto.getId());
+   response.setRenderParameter(PARAM_PAGE, 
+      PAGE_EDIT_DIGITAL_OBJECT);
  }
 \end{lstlisting}
 
 
 \chapter{Záver}
-Záver.
+Ciele zvolené na začiatku práce sa podarilo naplniť. Vytvorili sme portál, ktorý spĺňa požiadavky popísané v analýze. Aktuálna verzia prešla testovaním a je nasadená na produkčnom serveri, ktorý je sprístupnený verejnosti.
+
+Zvolený spôsob digitalizácie dát sa ukázal ako vhodný. Ako dobrá voľba sa tiež ukázala mapa, ktorá dodala portálu vysokú mieru prehľadnosti a robustná platforma \textit{Liferay Portal}, vďaka ktorej bolo možné implementovať dodatočné požiadavky zákazníka spoľahlivo a rýchlo.
+
+Za zmienku stojí aj fakt, že celé riešenie aplikácie využíva open source technológie, za ktorými ale stojí široká vývojárska komunita. Touto cestou sme boli schopní postaviť robustné, spoľahlivé a zároveň lacné riešenie bez použitia platenej verzie \textit{Liferay Portal} alebo zvažovanej technológie \textit{SharePoint}.
+
+Po nasadení portálu do ostrej prevádzky sa ponúkajú ďalšie možnosti rozvoja portálov kultúrneho dedičstva. Pre toto riešenie sa zatiaľ rozhodol len jeden kraj Českej republiky ale keby ich postupne pribudlo viac bolo by oveľa jednoduchšie zdieľať dáta medzi týmito inštitúciami keďže jednou z najväčších prekážok pre digitalizáciu je nejednotný formát dát a zverejňovacích rozhraní. Týmto spôsobom by tiež bolo možné evidovať nehnuteľnosti alebo historicky významné miesta. Portálové riešenie ale nie je obmedzené len na kultúrne dedičstvo a časom by sa mohlo pristúpiť k evidencii prírodopisných zbierok, minerálov, živočíchov ale aj prírodných útvarov a pamiatok. Vzhľadom k tomu, že mapová nadstavba je už súčasťou riešenia, nie je ťažké si v budúcnosti predstaviť využitie portálu na plánovanie náučnej trasy po okresoch Českej republiky.  
 \chapter*{Literatúra}
 \printbibliography[heading=none] %% Print the bibliography.
 \end{document}
