--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -149,9 +149,9 @@ Cieľom tejto bakalárskej práce je popísať princípy digitalizácie a publik
 
 \begin{document}
 \chapter{Úvod}
-Táto práca sa zaoberá elektronickým spracovaním a zverejnením kultúrneho dedičstva. V súčasnej dobe je to stále väčší trend v zverejňovaní obsahov múzejných zbierok a zbierok ďalších kultúrnych inštitúcií. Kvôli povahe dát sa ako najjednoduchšie javí použitie portálu na zverejňovanie knižných záznamov ale je tiež možné evidovať obrazy, sochy, zbrane alebo hudobné nástroje. Konkrétne v tomto prípade sa zaoberáme portálom, ktorý sprístupňuje viac zbierok na jednom mieste a rieši nie len sprístupňovanie dokumentov ale aj integráciu s ďalšími portálmi. Typickým vlastníkom môžu byť mestá, kraje alebo celoštátne inštitúcie ako NPÚ \footnote{NPÚ - Národní památkový ústav}. V našom prípade bol vyvíjaný pre koncového zákazníka, ktorým je jeden z krajov Českej republiky. Vieme si ale predstaviť, že podobný portál by mohol byť vhodný pre cirkev, archívy alebo univerzity.
+Táto práca sa zaoberá elektronickým spracovaním a zverejnením kultúrneho dedičstva. V súčasnej dobe je to stále väčší trend v zverejňovaní obsahov múzejných zbierok a zbierok ďalších kultúrnych inštitúcií. Kvôli povahe dát sa ako najjednoduchšie javí použitie portálu na zverejňovanie knižných záznamov, ale je tiež možné evidovať obrazy, sochy, zbrane alebo hudobné nástroje. V tomto prípade sa zaoberáme portálom, ktorý sprístupňuje viac zbierok na jednom mieste a rieši nie len sprístupňovanie dokumentov, ale aj integráciu s ďalšími portálmi. Typickým vlastníkom môžu byť mestá, kraje alebo celoštátne inštitúcie ako NPÚ \footnote{NPÚ - Národní památkový ústav}. V našom prípade bol vyvíjaný pre koncového zákazníka, ktorým je jeden z krajov Českej republiky. Vieme si ale predstaviť, že podobný portál by mohol byť vhodný pre cirkev, archívy alebo univerzity.
 
-Práca je rozdelená do piatich kapitol. Prvá opisuje tvorbu portálov kultúrneho dedičstva. Druhá sa venuje analýze požiadavkov zákazníka. Tretia približuje technológie využité pri implementácií, ktorá je popísaná poslednou kapitolou. 
+Práca je rozdelená do piatich kapitol. Prvá opisuje tvorbu portálov kultúrneho dedičstva. Druhá sa venuje analýze požiadavkov zákazníka. Tretia približuje technológie využité pri implementácii, ktorá je popísaná poslednou kapitolou. 
 \chapter{Portály digitálneho kultúrneho dedičstva}	
 Zámerom tejto iniciatívy je vytvoriť webový portál, ktorého prostredníctvom bude zaisťovaná príprava a samotné sprístupnenie digitálneho obsahu vybraných fondov pamäťových inštitúcií pôsobiacich na území Českej republiky širokej verejnosti a odborným bádateľom. Ďalej bude umožňovať on-line úpravu metadát a možnosť priloženia ďalších materiálov ktoré s dokumentom súvisia. Web by mal užívateľa zaujať a vytvoriť dojem jednoducho používateľnej interaktívnej stránky aj u používateľa, ktorého daná tématika nezaujíma. Digitálny obsah sa primárne skladá z kníh. Problémom existujúcich nástrojov na prehliadanie tohto obsahu je nepríťažlivosť pre užívateľa. 
 
@@ -573,7 +573,12 @@ Zvolený spôsob digitalizácie dát sa ukázal ako vhodný. Ako dobrá voľba s
 
 Za zmienku stojí aj fakt, že celé riešenie aplikácie využíva open source technológie, za ktorými ale stojí široká vývojárska komunita. Touto cestou sme boli schopní postaviť robustné, spoľahlivé a zároveň lacné riešenie bez použitia platenej verzie \textit{Liferay Portal} alebo zvažovanej technológie \textit{SharePoint}.
 
-Po nasadení portálu do ostrej prevádzky sa ponúkajú ďalšie možnosti rozvoja portálov kultúrneho dedičstva. Pre toto riešenie sa zatiaľ rozhodol len jeden kraj Českej republiky ale keby ich postupne pribudlo viac bolo by oveľa jednoduchšie zdieľať dáta medzi týmito inštitúciami keďže jednou z najväčších prekážok pre digitalizáciu je nejednotný formát dát a zverejňovacích rozhraní. Týmto spôsobom by tiež bolo možné evidovať nehnuteľnosti alebo historicky významné miesta. Portálové riešenie ale nie je obmedzené len na kultúrne dedičstvo a časom by sa mohlo pristúpiť k evidencii prírodopisných zbierok, minerálov, živočíchov ale aj prírodných útvarov a pamiatok. Vzhľadom k tomu, že mapová nadstavba je už súčasťou riešenia, nie je ťažké si v budúcnosti predstaviť využitie portálu na plánovanie náučnej trasy po okresoch Českej republiky.  
+Po nasadení portálu do ostrej prevádzky sa ponúkajú ďalšie možnosti rozvoja portálov kultúrneho dedičstva. Pre toto riešenie sa zatiaľ rozhodol len jeden kraj Českej republiky. Ak by ich postupne pribudlo viac, bolo by oveľa jednoduchšie zdieľať dáta medzi týmito inštitúciami, keďže jednou z najväčších prekážok pre digitalizáciu je nejednotný formát dát a zverejňovacích rozhraní. Týmto spôsobom by tiež bolo možné evidovať nehnuteľnosti alebo historicky významné miesta. Portálové riešenie ale nie je obmedzené len na kultúrne dedičstvo a časom by sa mohlo pristúpiť k evidencii prírodopisných zbierok, minerálov, živočíchov ale aj prírodných útvarov a pamiatok. Vzhľadom k tomu, že mapová nadstavba je už súčasťou riešenia, nie je ťažké si v budúcnosti predstaviť využitie portálu na plánovanie náučnej trasy po okresoch Českej republiky.  
 \chapter*{Literatúra}
 \printbibliography[heading=none] %% Print the bibliography.
+\chapter*{Prílohy}
+Súčasťou práce sú aj nasledujúce prílohy:
+\begin{itemize}
+	\item Diagram tried PD
+\end{itemize}
 \end{document}
